--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <link rel="stylesheet" type="text/css" href="css_website.css">
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
         <body>
             <div id="screen">
