Co-authored-by: Andrew Close <Andrew-Close@users.noreply.github.com>

--- a/tools/scam-detector.html
+++ b/tools/scam-detector.html
@@ -2,45 +2,45 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="../style.css">
     </head>
         <body>
             <div id="screen">
                 <div id="header">
                     <div id="navbar">
                         <div class="nav-button">
-                            <a href="index.html">
+                            <a href="../index.html">
                                 Home
                             </a>
                         </div>
                         <div class="nav-button">
-                            <a href="tools/scam-detector.html">
+                            <a href="scam-detector.html">
                                 Scam Detector
                             </a>
                         </div>
                         <div class="nav-button">
-                            <a href="tools/geolocator.html">
+                            <a href="geolocator.html">
                                 Phone Number Geolocator
-                       </div>
+                            </a>
+                        </div>
                         <div class="nav-button">
-                            <a href="tools/encryptor.html">
+                            <a href="encryptor.html">
                                 Encryptor
                             </a>
                         </div>
                         <div class="nav-button">
-                            <a href="tools/education.html">
+                            <a href="education.html">
                                 Education
                             </a>
                         </div>
                     </div>
                     <div id="content">
-                        <h1>Website Name</h1>
-                        <p>This website provides many useful security tools
-                          </a>
-                               in order to keep yourself safe. Use the navbar
-                            on the left-hand side of the screen to chose which
-                            tool you want to use.
+                        <h1>Scam Detector</h1>
+                        <p>Input the text that you want to check to
+                            see if it is likely a scam.
                         </p>
+                        <textarea class="multiline-text-input"></textarea>
+                        <button class="button">Submit</button>
                     </div>
                 </div>
                 <div id="footer">
