--- a/tools/geolocator.html
+++ b/tools/geolocator.html
@@ -37,14 +37,12 @@
                     <div id="content">
                         <h1>Phone Number Geolocator</h1>
                         <p>Input the phone number you want to check the
-                            origin of into the first text field. In the second
-                            field, input your own phone number to check what
-                            country you are from. No personal information is saved
-                            in our server.
+                            origin of into the text field. No personal 
+                            information is saved in our server.
                         </p>
                         <input class="text-input">
-                        <input class="text-input">
-                        <button class="button">Submit</button>
+                        
+                        <button class="button" onclick="findCountry()">Submit</button>
                     </div>
                 </div>
                 <div id="footer">
