--- a/tools/encryptor.html
+++ b/tools/encryptor.html
@@ -44,7 +44,7 @@
                 </div>
                 <div id="footer">
                     <p>
-                        Footer information
+                        No personal information is saved in our server. Scam Sleuth 2025 All Rights Reserved
                     </p>
                 </div>
             </div>
