--- a/tools/geolocator.html
+++ b/tools/geolocator.html
@@ -38,8 +38,8 @@
                     <div id="content">
                         <h1>Phone Number Geolocator</h1>
                         <p>Input the phone number you want to check the
-                            origin of into the text field. No personal 
-                            information is saved in our server.
+                            origin of into the text field. Only enter the country code, Ex: +994. 
+                            
                         </p>
                         <input id="code" class="text-input">
                         
@@ -49,7 +49,7 @@
                 </div>
                 <div id="footer">
                     <p>
-                        Footer information
+                        No personal information is saved in our server. Scam Sleuth 2025 All Rights Reserved
                     </p>
                 </div>
             </div>
