Co-authored-by: Andrew Close <Andrew-Close@users.noreply.github.com>

--- a/tools/education.html
+++ b/tools/education.html
@@ -39,9 +39,19 @@
                         <p>Here, you will find a few articles that educate you about
                             different security aspects and how to stay safe online.
                         </p>
+                            <div class="article-entry">
+                                <a href="../index.html">
+                                <p class="article-title">
+                                    Phishing Attacks
+                                </p>
+                                <p class="article-description">
+                                    Description of article
+                                </p>
+                                </a>
+                            </div>
                         <div class="article-entry">
                             <p class="article-title">
-                                Title
+                                Strong Passwords
                             </p>
                             <p class="article-description">
                                 Description of article
@@ -51,7 +61,7 @@
                 </div>
                 <div id="footer">
                     <p>
-                        No personal information is saved in our server. Scam Sleuth 2025 All Rights Reserved
+                        Footer information
                     </p>
                 </div>
             </div>
