--- a/tools/encryptor.html
+++ b/tools/encryptor.html
@@ -3,6 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <link rel="stylesheet" type="text/css" href="../style.css">
+        <script src="encryptor-code.js"></script>
     </head>
         <body>
             <div id="screen">
@@ -52,5 +53,6 @@
                     </p>
                 </div>
             </div>
+        <script src="encryptor-code.js"></script>
     </body>
 </html>
