--- a/tools/encryptor.html
+++ b/tools/encryptor.html
@@ -42,7 +42,7 @@
                         </p>
                         <input id="password-length" class="text-input">
                         <button class="button", onclick="generatePassword()">Submit</button>
-                        <p id="generated-password">
+                        <p id="newPassword">
 
                         </p>
                     </div>
