--- a/tools/education.html
+++ b/tools/education.html
@@ -40,18 +40,20 @@
                             different security aspects and how to stay safe online.
                         </p>
                             <div class="article-entry">
-                                <a href="../index.html">
                                 <p class="article-title">
+                                    <a class="article-link" href="../articles/phishing.html">
                                     Phishing Attacks
+                                    </a>
                                 </p>
                                 <p class="article-description">
                                     Description of article
                                 </p>
-                                </a>
                             </div>
                         <div class="article-entry">
                             <p class="article-title">
+                                <a class="article-link" href="../articles/strongPassword.html">
                                 Strong Passwords
+                                </a>
                             </p>
                             <p class="article-description">
                                 Description of article
