--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="icon" type="image/x-icon" href="https://www.centier.com/images/default-source/blog/romance-scam-excuses-hero.png?sfvrsn=f44b845d_1">
     </head>
         <body>
             <div id="screen">
@@ -24,7 +25,7 @@
                        </div>
                         <div class="nav-button">
                             <a href="tools/encryptor.html">
-                                Encryptor
+                                Password Generator
                             </a>
                         </div>
                         <div class="nav-button">
@@ -34,13 +35,16 @@
                         </div>
                     </div>
                     <div id="content">
-                        <h1>Website Name</h1>
+                        <h1>Scam Sleuth</h1>
                         <p>This website provides many useful security tools
-                          </a>
-                               in order to keep yourself safe. Use the navbar
+                               in order to keep yourself safe.
+                               It also provides educative resources that help the user
+                               be aware of online security measures.
+                               Use the navbar
                             on the left-hand side of the screen to chose which
                             tool you want to use.
                         </p>
+                        <img src="https://www.centier.com/images/default-source/blog/romance-scam-excuses-hero.png?sfvrsn=f44b845d_1" width="10" height="10">
                     </div>
                 </div>
                 <div id="footer">
