--- a/tools/education.html
+++ b/tools/education.html
@@ -25,7 +25,7 @@
                         </div>
                         <div class="nav-button">
                             <a href="encryptor.html">
-                                Encryptor
+                                Password Generator
                             </a>
                         </div>
                         <div class="nav-button">
@@ -40,30 +40,26 @@
                             different security aspects and how to stay safe online.
                         </p>
                             <div class="article-entry">
-                                <p class="article-title">
-                                    <a class="article-link" href="../articles/phishing.html">
+                                <p style="background-color: #eee; padding: 0.4em;" class="article-title">
+                                    <a style="color: black; text-decoration: underline;" class="article-link" href="../articles/phishing.html">
                                     Phishing Attacks
                                     </a>
                                 </p>
-                                <p class="article-description">
-                                    Description of article
-                                </p>
+                                
                             </div>
                         <div class="article-entry">
-                            <p class="article-title">
-                                <a class="article-link" href="../articles/strongPassword.html">
+                            <p style="background-color: #eee; padding: 0.4em;" class="article-title">
+                                <a style="color: black; text-decoration: underline;" class="article-link" href="../articles/strongPassword.html">
                                 Strong Passwords
                                 </a>
                             </p>
-                            <p class="article-description">
-                                Description of article
-                            </p>
+                            
                         </div>
                     </div>
                 </div>
                 <div id="footer">
                     <p>
-                        Footer information
+                        No personal information is saved in our server. Scam Sleuth 2025 All Rights Reserved
                     </p>
                 </div>
             </div>
