--- a/tools/encryptor.html
+++ b/tools/encryptor.html
@@ -42,14 +42,18 @@
                         </p>
                         <input id="password-length" class="text-input">
                         <button class="button", onclick="generatePassword()">Submit</button>
-                        <p id="newPassword">
-
+                        <p style="max-width: 100vw; text-wrap: wrap;" id="newPassword">
+                        Results
                         </p>
+
+                        <p>Use this website to check password strength! Courtesy of <a target="_blank" style="color:black" href="https://www.passwordmonster.com/">passwordmonster.com</a></p>
+
+                        <iframe width="1000px" height="600px" src="https://www.passwordmonster.com/" title="passwordStrength"></iframe>
                     </div>
                 </div>
                 <div id="footer">
                     <p>
-                        Footer information
+                        No personal information is saved in our server. Scam Sleuth 2025 All Rights Reserved
                     </p>
                 </div>
             </div>
