--- a/tools/scam-detector.html
+++ b/tools/scam-detector.html
@@ -26,7 +26,7 @@
                         </div>
                         <div class="nav-button">
                             <a href="encryptor.html">
-                                Encryptor
+                                Password Generator
                             </a>
                         </div>
                         <div class="nav-button">
@@ -38,7 +38,7 @@
                     <div id="content">
                         <h1>Scam Detector</h1>
                         <p>Input the text that you want to check to
-                            see if it is likely a scam.
+                            see if it is likely a scam. Make sure to paste the entire email's contents.
                         </p>
                         <textarea id="scamText" class="multiline-text-input"></textarea>
                         <button class="button" onclick="detectScam()">Submit</button>
