--- a/tools/geolocator.html
+++ b/tools/geolocator.html
@@ -26,7 +26,7 @@
                         </div>
                         <div class="nav-button">
                             <a href="encryptor.html">
-                                Encryptor
+                                Password Generator
                             </a>
                         </div>
                         <div class="nav-button">
